[package]
name = "diesel-pg-type-utils"
version = "0.1.0"
authors = ["Ben Xu"]
edition = "2024"
license = "MIT"
description = "Loose collection of diesel utilities for easier conversion from numerics into u64 as well as ways to easily create ways for diesel to directly deserialize ids."
readme = "README.md"
repository = "https://github.com/AlterionX/diesel-pg-type-utils"

[dependencies]
bigdecimal = "0"
thiserror = "1"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.diesel]
version = "2"
features = ["postgres_backend", "numeric"]

[dependencies.diesel-async]
version = "0.6"
features = ["postgres"]

[dependencies.treeerror]
version = "0.1.1"

# Used for examples
[dev-dependencies.serenity]
version = "0.11"
default-features = false
features = ["model", "rustls_backend"]

